infra/studio/victoriametrics-operator/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victoriametrics-operator
  annotations:
    linkerd.io/inject: enabled
